# worker_cola_multithread

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  annotated.html  annotated_dup.js  classLogger-members.html  classLogger.html  classThreadSafeQueue-members.html  classThreadSafeQueue.html  classWorker.html  classWorkerPool-members.html  classWorkerPool.html  classes.html  classnonstd_1_1optional__lite_1_1optional-members.html  classnonstd_1_1optional__lite_1_1optional.html  dir_000000_000003.html  dir_000001_000000.html  dir_000002_000000.html  dir_581f67ddba1cbb2d5fe8434f2a70675e.html  dir_581f67ddba1cbb2d5fe8434f2a70675e.js  dir_581f67ddba1cbb2d5fe8434f2a70675e_dep.map  dir_581f67ddba1cbb2d5fe8434f2a70675e_dep.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  examples.html  examples.js  files.html  (+176 more)
.github/workflows/: ci.yml  docs.yml
d0/d00/: structnonstd_1_1optional__lite_1_1detail_1_1struct__t.html  structnonstd_1_1optional__lite_1_1detail_1_1struct__t.js
d0/d1d/: classnonstd_1_1optional__lite_1_1optional.html  classnonstd_1_1optional__lite_1_1optional.js  classnonstd_1_1optional__lite_1_1optional_a024284c4c1a99a5bf0813c3ec5d6b5b9_icgraph.map  classnonstd_1_1optional__lite_1_1optional_a024284c4c1a99a5bf0813c3ec5d6b5b9_icgraph.md5  classnonstd_1_1optional__lite_1_1optional_a20d77743fd247d24433297c673bba89b_cgraph.map  classnonstd_1_1optional__lite_1_1optional_a20d77743fd247d24433297c673bba89b_cgraph.md5  classnonstd_1_1optional__lite_1_1optional_a42bee710920018175be2cdf6b275e77c_cgraph.md5  classnonstd_1_1optional__lite_1_1optional_a473a8646a91f486fd499f58db3cc15a7_cgraph.map  classnonstd_1_1optional__lite_1_1optional_a473a8646a91f486fd499f58db3cc15a7_cgraph.md5  classnonstd_1_1optional__lite_1_1optional_a473a8646a91f486fd499f58db3cc15a7_icgraph.map  classnonstd_1_1optional__lite_1_1optional_a473a8646a91f486fd499f58db3cc15a7_icgraph.md5  classnonstd_1_1optional__lite_1_1optional_a8d36137e398950bfbd63e02d2dac7789_icgraph.map  classnonstd_1_1optional__lite_1_1optional_a8d36137e398950bfbd63e02d2dac7789_icgraph.md5  classnonstd_1_1optional__lite_1_1optional_a96d1fee2fad2bb1ae239064125d8ed78_icgraph.map  classnonstd_1_1optional__lite_1_1optional_a96d1fee2fad2bb1ae239064125d8ed78_icgraph.md5  (+3 more)
d0/d26/: optional_8hpp__incl.map  (+1 more)
docs/: Doxyfile  README.md
include/: i_worker_action.h  logger.h  print_worker_action.h  thread_safe_queue.h  thread_safe_queue.ipp  worker_pool.h
scripts/: build.ps1  build.sh  generate_docs.ps1  generate_docs.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+56 more)
src/: logger.cpp  main.cpp  worker_pool.cpp
tests/: test_main.cpp
(+281 files in other folders)
